@@ -10,7 +10,7 @@ import com.github.dakusui.thincrest_cliche.core.AllOf;
 import com.github.dakusui.thincrest_cliche.core.Transform;
 import com.github.dakusui.thincrest_cliche.java.util.FromList;
 import com.github.dakusui.thincrest_cliche.java.util.FromMap;
-import com.github.dakusui.thincrest_pcond.validator.Validator;
+import com.github.valid8j.pcond.validator.Validator;
 import org.junit.BeforeClass;
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -21,7 +21,6 @@ import javax.sound.midi.Track;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static com.github.dakusui.symfonion.testutils.SymfonionTestCase.createNegativeTestCase;
@@ -37,7 +36,7 @@ import static com.github.dakusui.thincrest_cliche.javax.sound.midi.IfMidiMessage
 import static com.github.dakusui.thincrest_cliche.javax.sound.midi.SequenceTo.tickLength;
 import static com.github.dakusui.thincrest_cliche.javax.sound.midi.SequenceTo.trackList;
 import static com.github.dakusui.thincrest_cliche.javax.sound.midi.TrackTo.*;
-import static com.github.dakusui.thincrest_pcond.forms.Predicates.*;
+import static com.github.valid8j.pcond.forms.Predicates.*;
 
 @RunWith(Parameterized.class)
 public class MidiCompilerTest extends TestBase {
@@ -60,9 +59,10 @@ public class MidiCompilerTest extends TestBase {
 
   @Parameters(name = "{index}: {0}")
   public static Collection<Object[]> parameters() {
-    return Stream.concat(
-        positiveTestCases().stream().map(c -> new Object[]{c}),
-        negativeTestCases().stream().map(c -> new Object[]{c})).collect(Collectors.toList());
+    return Stream.concat(positiveTestCases().stream()
+                                            .map(c -> new Object[]{c}),
+                         negativeTestCases().stream()
+                                            .map(c -> new Object[]{c})).toList();
   }
 
   public static List<SymfonionTestCase> positiveTestCases() {
@@ -81,8 +81,8 @@ public class MidiCompilerTest extends TestBase {
                     $("$sequence", array(
                         object(
                             $("$beats", json("8/4")),
-                            $("$patterns", object()))
-                    )))),
+                            $("$parts", object()))
+                                        )))),
             Transform.$(FromSong.toKeySet()).check(isEmpty())),
 
         createPositiveTestCase(
@@ -93,8 +93,8 @@ public class MidiCompilerTest extends TestBase {
                 object($("$sequence", array(
                     merge(
                         object($("$beats", json("8/4"))),
-                        object($("$patterns", object($("piano", array()))))
-                    ))))),
+                        object($("$parts", object($("piano", array()))))
+                         ))))),
             AllOf.$(
                 FromMap.<String>toKeyList().allOf(
                     FromList.toSize().isEqualTo(1),
@@ -107,7 +107,7 @@ public class MidiCompilerTest extends TestBase {
                             Transform.$(midiEventAt(0)).isNotNull(),
                             Transform.$(ticks()).isEqualTo(0L))),
                     Transform.$(tickLength()).isEqualTo(0L)
-                ))),
+                                                               ))),
 
 
         createPositiveTestCase(
@@ -119,8 +119,8 @@ public class MidiCompilerTest extends TestBase {
                 $("$sequence", array(
                     merge(
                         object($("$beats", json("8/4"))),
-                        object($("$patterns", object($("piano", array("pg-change-to-piano"))))))
-                ))),
+                        object($("$parts", object($("piano", array("pg-change-to-piano"))))))
+                                    ))),
             allOf(
                 FromMap.<String>toKeyList().allOf(
                     FromList.toSize().isEqualTo(1),
@@ -133,7 +133,7 @@ public class MidiCompilerTest extends TestBase {
                             Transform.$(midiEventAt(0)).isNotNull(),
                             Transform.$(ticks()).isEqualTo(24L))),
                     Transform.$(tickLength()).isEqualTo(24L))
-            )),
+                 )),
 
         createPositiveTestCase(
             TestUtils.name("sixteen notes are given in a single string element", "compile", "number of events and tick length seem ok"),
@@ -145,9 +145,9 @@ public class MidiCompilerTest extends TestBase {
                 $("$sequence", array(
                     merge(
                         object($("$beats", json("8/4"))),
-                        object($("$patterns", object($("piano", array("C16x16"))))),
+                        object($("$parts", object($("piano", array("C16x16"))))),
                         object($("$groove", json("16beats")))
-                    )))),
+                         )))),
             AllOf.$(
                 FromMap.<String>toKeyList().allOf(
                     FromList.toSize().isEqualTo(1),
@@ -160,7 +160,7 @@ public class MidiCompilerTest extends TestBase {
                             Transform.$(midiEventAt(0)).isNotNull(),
                             Transform.$(ticks()).isEqualTo(379L))),
                     Transform.$(tickLength()).isEqualTo(379L))
-            )),
+                   )),
 
         createPositiveTestCase(
             TestUtils.name("sixteen notes are given in a single string element", "compile", "number of events and tick length seem ok"),
@@ -231,7 +231,7 @@ public class MidiCompilerTest extends TestBase {
                 toStreamBy(midiMessageStream(isNoteOff())).anyMatch(note(isEqualTo(C3))),
                 toStreamBy(midiMessageStream(isProgramChange())).anyMatch(programNumber(isEqualTo((byte) 65))),
                 toStreamBy(midiMessageStream(isControlChange())).anyMatch(control(isEqualTo(VOLUME)))
-            )),
+                                                                                                      )),
 
         createPositiveTestCase(
             TestUtils.name("a note and an 'arrayable' control (volume)", "compile", "arrayable control expanded."),
@@ -242,7 +242,7 @@ public class MidiCompilerTest extends TestBase {
                 toStreamBy(midiMessageStream(isNoteOff())).anyMatch(note(isEqualTo(C3))),
                 toStreamBy(midiMessageStream(isControlChange().and(control(isEqualTo(VOLUME))))).allMatch(controlData(greaterThanOrEqualTo((byte) 10))),
                 toStreamBy(midiMessageStream(isControlChange().and(control(isEqualTo(VOLUME))))).checkCount(isEqualTo(10L))
-            )),
+                                                                                                      )),
 
         createPositiveTestCase(
             TestUtils.name("a note and an 'arrayable' control (volume) by referencing different patterns using overlay", "compile", "arrayable control expanded."),
@@ -279,7 +279,7 @@ public class MidiCompilerTest extends TestBase {
                 toStreamBy(midiMessageStream(isControlChange().and(control(isEqualTo(VOLUME))))).allMatch(controlData(greaterThanOrEqualTo((byte) 10))),
                 toStreamBy(midiMessageStream(isControlChange().and(control(isEqualTo(VOLUME))))).checkCount(isEqualTo(10L)),
                 toStreamBy(midiMessageStream(isControlChange().and(control(isEqualTo(VOLUME)).and(controlData(greaterThanOrEqualTo((byte) 50)))))).checkCount(greaterThan(4L))
-            )),
+                                                                                                      )),
 
         createPositiveTestCase(
             TestUtils.name("a note and an 'arrayable' control (volume) with nulls", "compile", "arrayable control expanded replacing dots with intermediate values."),
@@ -291,8 +291,8 @@ public class MidiCompilerTest extends TestBase {
                 toStreamBy(midiMessageStream(isControlChange().and(control(isEqualTo(VOLUME))))).allMatch(controlData(greaterThanOrEqualTo((byte) 10))),
                 toStreamBy(midiMessageStream(isControlChange().and(control(isEqualTo(VOLUME))))).checkCount(isEqualTo(10L)),
                 toStreamBy(midiMessageStream(isControlChange().and(control(isEqualTo(VOLUME)).and(controlData(greaterThanOrEqualTo((byte) 50)))))).checkCount(greaterThan(4L))
-            ))
-    );
+                                                                                                      ))
+                        );
 
   }
 
